--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div id="forecastResult" class="forecast"></div>
   </div>
 
+  <script src="config.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
